<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RecibirDatos">


    <TextView
        android:id = "@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="@dimen/title"
        android:layout_gravity="center"
        />



<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/distance_top2">

    <TextView
        android:id = "@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="@dimen/name"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id = "@+id/text_view_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        android:textSize="@dimen/birth_date"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id = "@+id/text_view_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textSize="@dimen/phone"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id = "@+id/text_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="@dimen/email"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id = "@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="@dimen/description"
        android:layout_marginBottom="10dp"
        />

</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_edit_data"
        android:layout_width="@dimen/button_weigh2"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/distance_top"
        android:hint="@string/button_edit"

        />

</LinearLayout>